шифрование телефона в базе
